--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 ESP32_MIDI/.DS_Store
+ESP32_MIDI/.DS_Store
+ESP32_MIDI/ESP32_MIDI-backups/.DS_Store
+ESP32_MIDI/.DS_Store
+ESP32_MIDI/Pot-adaptor/.DS_Store
